Correct contact information, add in new contact icons as appropriate.

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Justin Hill | Web Development</title>
+    <meta charset="utf-8"> 
+   <title>Justin Hill | Web Development</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,800|Oswald:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
@@ -27,12 +27,13 @@
       <section>
         <img src="img/justin.jpg" alt="Photo of Justin Hill" class="profile-photo">
         <h3>About</h3>
-        <p>Here is some sample stuff from Nick Pettit.</p>
-        <p>If you'd like to follow me on twitter, my username is <a href="http://twitter.com/nickrp">@nickrp</a></p>
+        <p>Hi! This section will be filled with a short biographical statement.</p>
+        <p>If you'd like to follow me on twitter, my username is <a href="http://twitter.com/Justin_M_Hill" target="_blank">@Justin_M_Hill</a></p>
       </section>
       <footer>
-        <a href="http://twitter.com/nickrp"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://facebook.com/nickpettit"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="https://twitter.com/Justin_M_Hill" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="https://www.linkedin.com/in/hilljustin" target="_blank"><img src="img/linkedin-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="https://plus.google.com/+JustinHill1986" target="_blank"><img src="img/googleplus-wrap.png" alt="Google+ Logo" class="social-icon"></a>
         <p>&copy; 2014 Justin Hill.</p>
       </footer>
     </div>
