--- a/contact.html
+++ b/contact.html
@@ -26,19 +26,21 @@
     <div id="wrapper">
       <section id="primary">
         <h3>General Information</h3>
-        <p>To get in touch with me, yada yada...</p>
+        <p></p>
         <p>Please don't call me bro.</p>
       </section>
       <section id="secondary">
         <h3>Contact Details</h3>
         <ul class="contact-info">
-          <li class="phone"><a href="tel:555-5555">555-5555</a></li>
-          <li class="email"><a href="mailto:nick@example.com">nick@example.com</a></li>
+          <!-- remove telephone number and replace with Skype call URI -->
+          <!-- <li class="phone"><a href="tel:757-870-7929"></a></li> -->
+          <li class="email"><a href="mailto:justinmhill@gmail.com">justinmhill@gmail.com</a></li>
         </ul>
       </section>
       <footer>
-        <a href="http://twitter.com/nickrp"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://facebook.com/nickpettit"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="https://twitter.com/Justin_M_Hill" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="https://www.linkedin.com/in/hilljustin" target="_blank"><img src="img/linkedin-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="https://plus.google.com/+JustinHill1986" target="_blank"><img src="img/googleplus-wrap.png" alt="Google+ Logo" class="social-icon"></a>
         <p>&copy; 2014 Justin Hill.</p>
       </footer>
     </div>
