--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
         </ul>
       </section>
       <footer>
-        <a href="http://twitter.com/nickrp"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://facebook.com/nickpettit"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="https://twitter.com/Justin_M_Hill" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="https://www.linkedin.com/in/hilljustin" target="_blank"><img src="img/linkedin-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="https://plus.google.com/+JustinHill1986" target="_blank"><img src="img/googleplus-wrap.png" alt="Google+ Logo" class="social-icon"></a>
         <p>&copy; 2014 Justin Hill.</p>
       </footer>
     </div>
