update about and contact information, add twitter contact css

--- a/about.html
+++ b/about.html
@@ -27,8 +27,10 @@
       <section>
         <img src="img/justin.jpg" alt="Photo of Justin Hill" class="profile-photo">
         <h3>About</h3>
-        <p>Hi! This section will be filled with a short biographical statement.</p>
-        <p>If you'd like to follow me on twitter, my username is <a href="http://twitter.com/Justin_M_Hill" target="_blank">@Justin_M_Hill</a></p>
+        
+        <p>Hi! My name is Justin Hill and I am an educational technology professional and web development student in Alexandria, VA. Although I am currently self-taught (through online courses with <a href="http://www.teamtreehouse.com">Treehouse</a>, <a href="http://www.codeschool.com">Code School</a>, and whatever else I can find), my goal is to refine my skills through a bootcamp program, either online (<a href="http://bloc.io">Bloc.io</a>) or with other like-minded individuals here in the Washington DC area (<a href="http://www.generalassemb.ly">General Assembly</a>).</p>
+        
+        <p>My dream is to utilize emergent educational technologies to develop alternatives to traditional schooling that arm students with the skills necessary to help build a free, peaceful, and creative society. If you'd like to follow me on my journey, check me out on twitter (my username is <a href="http://twitter.com/Justin_M_Hill" target="_blank">@Justin_M_Hill</a>) or feel free to <a href="contact.html">contact me</a>.</p>
       </section>
       <footer>
         <a href="https://twitter.com/Justin_M_Hill" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
