--- a/contact.html
+++ b/contact.html
@@ -26,15 +26,15 @@
     <div id="wrapper">
       <section id="primary">
         <h3>General Information</h3>
-        <p></p>
-        <p>Please don't call me bro.</p>
+        <p>Feel free to contact me for more information about my work. I will get back to you within one business day.</p>
+        <p>I look forward to hearing from you!</p>
       </section>
       <section id="secondary">
         <h3>Contact Details</h3>
         <ul class="contact-info">
-          <!-- remove telephone number and replace with Skype call URI -->
-          <!-- <li class="phone"><a href="tel:757-870-7929"></a></li> -->
-          <li class="email"><a href="mailto:justinmhill@gmail.com">justinmhill@gmail.com</a></li>
+          <li class="phone"><a href="tel:571-357-5760">571-357-5760</a></li>
+          <li class="email"><a href="mailto:justinmhill@gmail.com" target="_blank">justinmhill@gmail.com</a></li>
+          <li class="twitter"><a href="https://twitter.com/Justin_M_Hill" target="_blank">@Justin_M_Hill</a><li>
         </ul>
       </section>
       <footer>
