update twitter handle in footer

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <p>My dream is to utilize emergent educational technologies to develop alternatives to traditional schooling that arm students with the skills necessary to help build a free, peaceful, and creative society. If you'd like to follow me on my journey, check me out on twitter (my username is <a href="http://twitter.com/Justin_M_Hill" target="_blank">@Justin_M_Hill</a>) or feel free to <a href="contact.html">contact me</a>.</p>
       </section>
       <footer>
-        <a href="https://twitter.com/Justin_M_Hill" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="https://twitter.com/justinmhill" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="https://www.linkedin.com/in/hilljustin" target="_blank"><img src="img/linkedin-wrap.png" alt="Facebook Logo" class="social-icon"></a>
         <a href="https://plus.google.com/+JustinHill1986" target="_blank"><img src="img/googleplus-wrap.png" alt="Google+ Logo" class="social-icon"></a>
         <p>&copy; 2014 Justin Hill.</p>
