Update twitter handle in body and footer

--- a/contact.html
+++ b/contact.html
@@ -34,11 +34,11 @@
         <ul class="contact-info">
           <li class="phone"><a href="tel:571-357-5760">571-357-5760</a></li>
           <li class="email"><a href="mailto:justinmhill@gmail.com" target="_blank">justinmhill@gmail.com</a></li>
-          <li class="twitter"><a href="https://twitter.com/Justin_M_Hill" target="_blank">@Justin_M_Hill</a><li>
+          <li class="twitter"><a href="https://twitter.com/justinmhill" target="_blank">@justinmhill</a><li>
         </ul>
       </section>
       <footer>
-        <a href="https://twitter.com/Justin_M_Hill" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="https://twitter.com/justinmhill" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="https://www.linkedin.com/in/hilljustin" target="_blank"><img src="img/linkedin-wrap.png" alt="Facebook Logo" class="social-icon"></a>
         <a href="https://plus.google.com/+JustinHill1986" target="_blank"><img src="img/googleplus-wrap.png" alt="Google+ Logo" class="social-icon"></a>
         <p>&copy; 2014 Justin Hill.</p>
